unpackaged/main/default/objects/Subscriptions__c/Subscriptions__c.object-meta.xml
<CustomObject>
    <label>Data Subscriptions</label>
    <nameField>
        <label>Subscriptions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>