unpackaged/main/default/objects/Subscriptions__c/fields/Benchmark__c.field-meta.xml
<CustomField>
    <fullName>Benchmark__c</fullName>
    <label>Benchmark</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sector</fullName>
                <default>true</default>
                <label>Sector</label>
            </value>
            <value>
                <fullName>Market</fullName>
            </value>
            <value>
                <fullName>Department Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>