unpackaged/main/default/objects/Subscriptions__c/fields/Brand_Final__c.field-meta.xml
<CustomField>
    <fullName>Brand_Final__c</fullName>
    <formula>IF(len( Brand_Override__c )&gt;1,  Brand_Override__c,   Account_ID__r.Warehouse_Brand__c  )</formula>
    <label>Brand_Final</label>
    <type>Text</type>
</CustomField>