unpackaged/main/default/objects/Subscriptions__c/fields/Brand_Override__c.field-meta.xml
<CustomField>
    <fullName>Brand_Override__c</fullName>
    <label>Brand_Overide</label>
    <length>100</length>
    <type>Text</type>
</CustomField>