unpackaged/main/default/objects/Subscriptions__c/fields/Combine_Countries__c.field-meta.xml
<CustomField>
    <fullName>Combine_Countries__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field enables the Python API to combined the selected countries into a single report</description>
    <inlineHelpText>Select this option if you wish to combine the selected countries into their own &quot;Group&quot; section in the report.</inlineHelpText>
    <label>Combined Countries</label>
    <type>Checkbox</type>
</CustomField>