unpackaged/main/default/objects/Subscriptions__c/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <inlineHelpText>Select the countries required for the subscription</inlineHelpText>
    <label>Countries</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Store_Country_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>AUSTRIA</fullName>
            </value>
            <value>
                <fullName>BELGIUM</fullName>
            </value>
            <value>
                <fullName>CYPRUS</fullName>
            </value>
            <value>
                <fullName>CZECH REPUBLIC</fullName>
            </value>
            <value>
                <fullName>DENMARK</fullName>
            </value>
            <value>
                <fullName>FAROE ISLANDS</fullName>
            </value>
            <value>
                <fullName>FRANCE</fullName>
            </value>
            <value>
                <fullName>GERMANY</fullName>
            </value>
            <value>
                <fullName>GREECE</fullName>
            </value>
            <value>
                <fullName>HUNGARY</fullName>
            </value>
            <value>
                <fullName>ICELAND</fullName>
            </value>
            <value>
                <fullName>IRELAND</fullName>
            </value>
            <value>
                <fullName>ITALY</fullName>
            </value>
            <value>
                <fullName>KOREA, REPUBLIC OF</fullName>
            </value>
            <value>
                <fullName>LITHUANIA</fullName>
            </value>
            <value>
                <fullName>LUXEMBOURG</fullName>
            </value>
            <value>
                <fullName>MALTA</fullName>
            </value>
            <value>
                <fullName>MOROCCO</fullName>
            </value>
            <value>
                <fullName>NETHERLANDS</fullName>
            </value>
            <value>
                <fullName>NORWAY</fullName>
            </value>
            <value>
                <fullName>POLAND</fullName>
            </value>
            <value>
                <fullName>PORTUGAL</fullName>
            </value>
            <value>
                <fullName>RUSSIAN FEDERATION</fullName>
            </value>
            <value>
                <fullName>SINGAPORE</fullName>
            </value>
            <value>
                <fullName>SLOVAKIA</fullName>
            </value>
            <value>
                <fullName>SPAIN</fullName>
            </value>
            <value>
                <fullName>SWEDEN</fullName>
            </value>
            <value>
                <fullName>SWITZERLAND</fullName>
            </value>
            <value>
                <fullName>TURKEY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>