unpackaged/main/default/objects/Subscriptions__c/fields/External_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Tax_ID__c</fullName>
    <formula>Account_ID__r.External_Tax_System_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External_Tax_ID</label>
    <type>Text</type>
</CustomField>