unpackaged/main/default/objects/Subscriptions__c/fields/Final_Brand__c.field-meta.xml
<CustomField>
    <fullName>Final_Brand__c</fullName>
    <formula>IF(len( Brand_Override__c )&gt;1, Brand_Override__c, Account_ID__r.Warehouse_Brand__c )</formula>
    <label>Final Brand</label>
    <type>Text</type>
</CustomField>