unpackaged/main/default/objects/Subscriptions__c/fields/Generate_Report_Per_Country__c.field-meta.xml
<CustomField>
    <fullName>Generate_Report_Per_Country__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Additionally generate a report for each of the countries selected</inlineHelpText>
    <label>Generate Report Per Country</label>
    <type>Checkbox</type>
</CustomField>