unpackaged/main/default/objects/Subscriptions__c/fields/Include_Franchise_Stores__c.field-meta.xml
<CustomField>
    <fullName>Include_Franchise_Stores__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box to include Franchise stores. The default is to remove Franchise stores from reports</inlineHelpText>
    <label>Include Franchise Stores</label>
    <type>Checkbox</type>
</CustomField>