unpackaged/main/default/objects/Subscriptions__c/fields/Internal_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Internal_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Data_Subscriptions_User</relationshipName>
    <type>Lookup</type>
</CustomField>