unpackaged/main/default/objects/Subscriptions__c/fields/Less_than_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Less_than_12_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Client has been active less than 12 months, therefore YoY is not available</description>
    <inlineHelpText>Tick this box if the client has been active less than 12 months, therefore YoY is not available</inlineHelpText>
    <label>Less than 12 Months</label>
    <type>Checkbox</type>
</CustomField>