unpackaged/main/default/objects/Subscriptions__c/fields/Months_YoY__c.field-meta.xml
<CustomField>
    <fullName>Months_YoY__c</fullName>
    <inlineHelpText>Number of months to go back for Year-On-Year calculations</inlineHelpText>
    <label>Months YoY</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
                <default>true</default>
                <label>12</label>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>