unpackaged/main/default/objects/Subscriptions__c/fields/Outlet_Option__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Option__c</fullName>
    <inlineHelpText>To select if the report is for All Stores, Outlet Stores or only Full price stores. By applying an outlet filter, any specific outlet pages will be removed from the report.</inlineHelpText>
    <label>Outlet Option</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Outlet</fullName>
            </value>
            <value>
                <fullName>Full Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>