unpackaged/main/default/objects/Subscriptions__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>Select the period that the report should run for</description>
    <inlineHelpText>Select the period that the report should run for</inlineHelpText>
    <label>Report Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Previous Month</fullName>
            </value>
            <value>
                <fullName>Previous 2 Months</fullName>
            </value>
            <value>
                <fullName>Previous 3 Months</fullName>
            </value>
            <value>
                <fullName>Previous 6 Months</fullName>
            </value>
            <value>
                <fullName>Current Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>