unpackaged/main/default/objects/Subscriptions__c/fields/Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Recurrence__c</fullName>
    <description>How often should the report be run.</description>
    <label>Recurrence</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Report_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Every 6 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>