unpackaged/main/default/objects/Subscriptions__c/fields/Report_Description__c.field-meta.xml
<CustomField>
    <fullName>Report_Description__c</fullName>
    <formula>&quot;This &quot;+text(Report_Name__c) + &quot; report subscription for &quot;+Account_ID__r.Name+&quot; will be uploaded to Salesforce on the defined day and repeat  &quot;+text(Recurrence__c)+&quot;. The report will be run for  &quot;+text(Outlet_Option__c)+&quot; stores, and will be  &quot;+text(Report_Rollup__c)+&quot; across all selected markets.&quot;</formula>
    <label>Report Description</label>
    <type>Text</type>
</CustomField>