unpackaged/main/default/objects/Subscriptions__c/fields/Report_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Report_Last_Run__c</fullName>
    <label>Report Last Run</label>
    <type>DateTime</type>
</CustomField>