unpackaged/main/default/objects/Subscriptions__c/fields/Report_Pages__c.field-meta.xml
<CustomField>
    <fullName>Report_Pages__c</fullName>
    <inlineHelpText>Select which page the report should contain</inlineHelpText>
    <label>Report Pages</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Report_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
                <default>true</default>
                <label>ALL</label>
            </value>
            <value>
                <fullName>Cover</fullName>
            </value>
            <value>
                <fullName>About Us</fullName>
            </value>
            <value>
                <fullName>Commentary_Group</fullName>
            </value>
            <value>
                <fullName>Commentary_Country</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
            </value>
            <value>
                <fullName>Competitive Benchmark</fullName>
            </value>
            <value>
                <fullName>Destination</fullName>
            </value>
            <value>
                <fullName>Destination YTD</fullName>
            </value>
            <value>
                <fullName>Top 3 Destinaitons</fullName>
            </value>
            <value>
                <fullName>Nationality Analysis</fullName>
            </value>
            <value>
                <fullName>Nationality Analysis YTD</fullName>
            </value>
            <value>
                <fullName>Nationality Top 3</fullName>
            </value>
            <value>
                <fullName>Location Analysis</fullName>
            </value>
            <value>
                <fullName>Location Analysis YTD</fullName>
            </value>
            <value>
                <fullName>Location Top 3</fullName>
            </value>
            <value>
                <fullName>Outlet Full Price</fullName>
            </value>
            <value>
                <fullName>Outlet Destinations Monthly</fullName>
            </value>
            <value>
                <fullName>Outlet Destinations</fullName>
            </value>
            <value>
                <fullName>Outlet Nationalities</fullName>
            </value>
            <value>
                <fullName>Refund Methods</fullName>
            </value>
            <value>
                <fullName>Refund Details</fullName>
            </value>
            <value>
                <fullName>Match Rate</fullName>
            </value>
            <value>
                <fullName>Match Rate Summary</fullName>
            </value>
            <value>
                <fullName>Match Rate Destination</fullName>
            </value>
            <value>
                <fullName>Match Rate Nationality</fullName>
            </value>
            <value>
                <fullName>Match Rate Store</fullName>
            </value>
            <value>
                <fullName>Glossary</fullName>
            </value>
            <value>
                <fullName>Spender Cover</fullName>
            </value>
            <value>
                <fullName>Spender Segmentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>