unpackaged/main/default/objects/Subscriptions__c/fields/Report_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Report_Rollup__c</fullName>
    <inlineHelpText>Rollup option creates 1 single PDF report including all individual country reports, while individual report option will create a separate PDF for each country.</inlineHelpText>
    <label>Report Rollup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rolled up into Single File</fullName>
            </value>
            <value>
                <fullName>Split out per Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>