unpackaged/main/default/objects/Subscriptions__c/fields/Store_Country_Region__c.field-meta.xml
<CustomField>
    <fullName>Store_Country_Region__c</fullName>
    <label>Store Country Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
                <default>true</default>
                <label>Global</label>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>