unpackaged/main/default/objects/Subscriptions__c/validationRules/Day_to_Run.validationRule-meta.xml
<ValidationRule>
    <fullName>Day_to_Run</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Day_to_run__c )</errorConditionFormula>
    <errorMessage>You must select a day for the report to run</errorMessage>
</ValidationRule>