unpackaged/main/default/objects/Subscriptions__c/validationRules/Planet_Email_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Planet_Email_Only</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(CONTAINS(Recipient_Email__c,&#39;@planetpayment&#39;))</errorConditionFormula>
    <errorDisplayField>Recipient_Email__c</errorDisplayField>
    <errorMessage>During this initial rollout of Data reports, subscriptions can be sent to internal Planet users ONLY.</errorMessage>
</ValidationRule>