unpackaged/main/default/objects/Subscriptions__c/validationRules/Report_Page_contains_ALL_and_Another.validationRule-meta.xml
<ValidationRule>
    <fullName>Report_Page_contains_ALL_and_Another</fullName>
    <active>true</active>
    <errorConditionFormula>includes( Report_Pages__c ,&quot;ALL&quot;)  &amp;&amp; (includes( Report_Pages__c ,&quot;Cover&quot;)  || includes( Report_Pages__c ,&quot;Splash&quot;))</errorConditionFormula>
    <errorDisplayField>Report_Pages__c</errorDisplayField>
    <errorMessage>You must select All Pages, or individual pages. Please remove as required.</errorMessage>
</ValidationRule>