unpackaged/main/default/objects/Subscriptions__c/validationRules/Store_Summary_Shop_Record_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Store_Summary_Shop_Record_Only</fullName>
    <active>true</active>
    <errorConditionFormula>Account_Type__c  &lt;&gt; &#39;Shop&#39;
 &amp;&amp; 
text( Report_Name__c) = &quot;Store Summary&quot;</errorConditionFormula>
    <errorDisplayField>Account_ID__c</errorDisplayField>
    <errorMessage>The Store Summary report can only be run on Shop Account Record types.</errorMessage>
</ValidationRule>